--- a/lib/styles.css
+++ b/lib/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 #wrapper.toggled {
-    /*padding-left: 250px;*/
+    padding-left: 250px;
 }
 
 #sidebar-wrapper {
@@ -98,7 +98,7 @@ body {
 
 @media(min-width:768px) {
     #wrapper {
-        /*padding-left: 250px;*/
+        padding-left: 250px;
     }
 
     #wrapper.toggled {
