--- a/lib/styles.css
+++ b/lib/styles.css
@@ -123,3 +123,39 @@ body {
         margin-right: 0;
     }
 }
+
+table {
+    border-collapse: separate;
+    border-spacing: 0 5px;
+}
+
+/*thead th {
+    background-color: #006DCC;
+    color: white;
+}*/
+
+#spending-head {
+    background-color: #006DCC;
+    color: white;
+}
+
+#owes-head {
+    background-color: #ee6e73;
+    color: white;
+}
+
+tbody td {
+    background-color: #EEEEEE;
+}
+
+tr td:first-child,
+tr th:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+tr td:last-child,
+tr th:last-child {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
