--- a/lib/styles.css
+++ b/lib/styles.css
@@ -165,3 +165,35 @@ tr th:last-child {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+h3 {
+    font-weight: bold;
+}
+
+.form-inline {
+    text-align: center;
+    background-color: #EEEEEE;
+    border-radius: 4px;
+    padding: 20px;
+}
+
+.form-group {
+    margin-right: 10px;
+}
+
+.input-group {
+    margin-right: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
