--- a/client/lib/styles.css
+++ b/client/lib/styles.css
@@ -126,8 +126,14 @@ body {
 
 .appTitle {
     text-align: center;
-    font-family: 'Anton', sans-serif;
-    font-size: 69px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 60px;
+    font-weight: 100;
+    line-height: 100px;
+}
+
+strong {
+    font-weight: 500;
 }
 
 table {
@@ -165,6 +171,15 @@ tr th:last-child {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+
+h1, h2 {
+    margin-top: 10px;
+    font-size: 38px;
+    font-weight: 100;
+    color: #555;
+    line-height: 50px;
+}
+
 h3 {
     font-weight: bold;
 }
